Bug 929362 - When refusing compositor animation during BuildLayer, set a property on the frame that disables all async animations on it forever. r=roc

--HG--
extra : rebase_source : 98c9b690a4842c19314dd46f5e531601b77fe527